--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
 body{
-text-align:left;
+    padding: 2px;
+    text-align:left;
     background-color: aliceblue;
 }
 .menu{
@@ -19,12 +15,16 @@ text-align:left;
     background-color: lightgreen;
     margin: 10px;
 }
+
 header{
-    height: 10vh;
+    margin: -15px;
     display: flex;
+    position: relative;
+    width:absolute;
     justify-content: space-between;
-    background-color: black;
+    background-color: rgb(147, 189, 108);
 }
+
 ul{
     display: flex;
     margin: 23px;
@@ -41,7 +41,7 @@ a{
     text-decoration: none;
 }
 ul a:hover{
-    color: blueviolet;
+    color: rgb(91, 122, 91);
 }
 .container{
     padding:0px 50px;
@@ -51,4 +51,10 @@ ul a:hover{
 }
 .texto{
 line-height: 20px;
+}
+.rodape{
+    background-color: rgb(203, 241, 211);
+}
+a{
+    color: rgb(8, 8, 8);
 }
