--- a/formulario.css
+++ b/formulario.css
@@ -1,71 +1,74 @@
 *{
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(188, 236, 176), rgb(192, 219, 181));
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
-.box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.6);
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: #101026;
+}
+section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 45px;
+    background-color: #1d1d2e;
+    width: 500px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+::selection h2{
+    color: #f5f5f5;
+    font-size: 2.5rem;
+    margin: 2rem;
+}
+section form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+form label{
+    color:#f5f5f5;
+    font-size: 17px;
+    margin-bottom: 4px;
+}
+form input{
     padding: 15px;
+    outline: none;
+    border: 0;
+    margin-bottom: 20px;
+    font-size: 15px;
+    transition: all 0.5s;
+}
+form input:focus{
     border-radius: 15px;
-    width: 20%;
 }
-fieldset{
-    border: 3px solid rgb(5, 5, 5);
-}
-legend{
-    border: 1px solid rgb(75, 163, 90);
+form textarea{
     padding: 10px;
-    text-align: center;
-    background-color: rgb(74, 109, 80);
-    border-radius: 8px;
-}
-.inputBox{
-    position: relative;
-}
-.inputUser{
-    background: none;
-    border: none;
-    border-bottom: 1px solid white;
     outline: none;
-    color: rgb(12, 12, 12);
+    border: 0;
     font-size: 15px;
-    width: 100%;
-    letter-spacing: 2px;
+    margin-bottom: 30px;
+    transition: all 0.5s;
 }
-.labelInput{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    pointer-events: none;
-    transition: .5s;
+form textarea:focus{
+    border-radius: 16px;
 }
-.inputUser:focus ~ .labelInput,
-.inputUser:valid ~ .labelInput{
-    top: -20px;
-    font-size: 12px;
-    color:darkgreen;
-}
-#data_nascimento{
-    border: none;
-    padding: 8px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
-#submit{
-    background-image: linear-gradient(to right, rgb(215, 235, 196), rgb(223, 236, 219));
-    width: 100%;
-    border: none;
+form button{
     padding: 15px;
-    color:black;
-    font-size: 15px;
-    cursor: ponter;
-    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 2px solid #f5f5f5;
+    color:#f5f5f5;
+    transition: all 1s;
+    margin-bottom: 20px;
 }
-#submit:hover{
-    background-image: linear-gradient(to right, rgb(215, 235, 196), rgb(223, 236, 219));
-}
-    
+form button:hover{
+    background: #f5f5f5;
+    color:#101026;
+    border-radius: 16px;}
