--- a/formulario.css
+++ b/formulario.css
@@ -70,5 +70,35 @@ form button{
 }
 form button:hover{
     background: #f5f5f5;
-    color:#101026;
-    border-radius: 16px;}
+    color:#7676b3;
+    border-radius: 16px;
+}
+/*página do Obrigada */
+.main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #101026;
+    flex-direction: column;
+}
+.text{
+    font-size: 45px;
+    color: #f5f5f5;
+    margin-bottom: 30px;
+}
+.paragrafo{
+    color: #f5f5f5;
+    margin-bottom: 50 px;
+}
+.btn{
+    padding: 15px 55px;
+    background: #f5f5f5;
+    text-decoration: none;
+    color: #101026;
+    font-size: 18px;
+    transition: all 0.5s;
+}
+.bnt:hover{
+    border-radius: 16px;
+}
