--- a/style.css
+++ b/style.css
@@ -1,83 +1,104 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-body{
-    padding: 2px;
-    text-align:left;
-    background: #fcfcfc;
+body {
+	text-align: center;
+	background: color #a7ffe2;
 }
-.menu{
-    font-family: oswald,sans-serif;
+.wrapper {
+	width: 1010px;
+	margin: 0 auto;
 }
-.logo{
-    width: 42px;
-    height: 42px;
-    border-radius: 100px;
-    background-color: lightgreen;
-    margin: 10px;
+header {  
+	height: 100px;
+	background: #556b2f;
+	width: 100%;
+	z-index: 10;
+	position: fixed;
+	display: flex;
+	justify-content: space-between;
+}
+ header h3{
+	text-decoration: none;
+	font-family: poppins;
+	letter-spacing: 4px;
+	font-size: 20px;
+	margin: 0 10px;
+	color:#6b8e23
+	width: 30%;
+	float: left;
+	line-height: 100px;
 }
 
-header{
-    margin: -15px;
-    display: flex;
-    position: relative;
-    width:absolute;
-    justify-content: space-between;
-    background-color: rgb(147, 189, 108);
+nav {
+	float: right;
+	line-height: 100px;
 }
-
-.borda{
-    padding: 0px 25px;
-
+nav a {
+	text-decoration: none;
+	font-family: poppins;
+	letter-spacing: 4px;
+	font-size: 20px;
+	margin: 0 10px;
+	color:#6b8e23
 }
-ul{
-    display: flex;
-    margin: 23px;
-    justify-content: space-between;
+nav a:hover {
+color:#228b22
 }
-li{
-    color: rgb(66, 218, 66);
-    list-style-type: none;
-    cursor: pointer;
-    padding-left: 2rem;
+.banner-area {
+	width: 100%;
+	height: 500px;
+	position: fixed;
+	top: 100px;
+	background-image: url(./imagem/banner\ folhas.jpg);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: center center;
 }
-a{
-    color: lightgreen;
-    text-decoration: none;
+.banner-area h4 {
+	padding-top: 2%;
+	font-size: 30px;
+	font-family: poppins;
+	text-transform: uppercase;
+	color: #f5f6f5;
 }
-ul a:hover{
-    color: rgb(91, 122, 91);
+.content-area {
+	width: 100%;
+	position: relative;
+	top: 450px;
+	background: #92e39a;
+	height: 2100px;
+}
+.content-area h3 {
+	font-family: poppins;
+	letter-spacing: 4px;
+	padding-top: 30px;
+	font-size: 40px;
+	margin: 0;
+}
+.content-area p {
+	font-family: 'Courier New', Courier, monospace;
+	line-height: 30px;
+	color: black;
+}
+.container{
+    padding:0px 50px;
 }
 .center{
     text-align: center;
 }
-.texto{
-line-height: 20px;
-
-}
 footer{
     position: relative;
     width: 100%;
-    background: #3586ff;
+    background: #556b2f;
     min-height: 100px;
     padding: 20px 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-footer .socials
-footer .menu
-{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-    flex-wrap: wrap;
 }
 footer .socials li{
     list-style: none;
@@ -87,31 +108,18 @@ footer .socials li a{
     font-size: 2em;
     color: #fff;
     margin: 0 10px;
-    display: inline-block;
     transition: 0.5;
+	justify-items: center;
+
 }
 footer .socials li a:hover{
     transform: translateY(-10px);
+	color: #228b22;
 }
 footer p{
-    color:#fff;
+    color:#6b8e23;
     text-align: center;
     margin-top: 15px;
     margin-bottom: 10px;
     font-size: 1.1em;
-}
-.footer .wave{
-    position: absolute;
-    top: 100px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: #f00 url(./imagem/wave.png)
-    background-size: 1000px 100px;
-}
-footer .wave#wane1{
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0;
-    animation: animateWave 4s linear infinite;
 }
